infrastructure/cilium/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-https
  namespace: kube-system
spec:
  parentRefs:
    - name: crulabs-gateway
      sectionName: websecure
      namespace: gateway-system
  hostnames:
    - hubble.crulabs.intern
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-http
  namespace: kube-system
spec:
  parentRefs:
    - name: crulabs-gateway
      sectionName: web
      namespace: gateway-system

  hostnames:
    - hubble.crulabs.intern

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
